added highscores display and removed code used for testing

--- a/templates/end.html
+++ b/templates/end.html
@@ -17,8 +17,8 @@
       </form>
       {% else %}
       <ol>
-	{% for score in highscores %}
-	<li>{{score}}</li>
+	{% for name, score in highscores %}
+	<li>{{name}}    {{score}}</li>
 	{% endfor %}
       </ol>
       <form action='/' >
