--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,21 +1,13 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Quiz Game</title>
-    <link rel=stylesheet type=text/css href='{{ url_for('static', filename='style.css') }}'>
-  </head>
-  <body>
-    <div class=page>
-      <h1> Welcome to Quiz Game! </h1>
-      <form method='post' action="/">
-	Number of Questions:
-	<select name='nquestions'>
-	  {% for opt in options %}
-	  <option value='{{opt}}'>{{opt}}</option>
-	  {% endfor %}
-	</select> <br>
-	<br><input type='submit' value='Start Game' />
-      </form>
-    </div>
-  </body>
-
+{% extends "layout.html" %}
+{% block body %}
+  <h1> Welcome to Quiz Game! </h1>
+  <form method='post' action="/">
+    Number of Questions:
+    <select name='nquestions'>
+      {% for opt in options %}
+      <option value='{{opt}}'>{{opt}}</option>
+      {% endfor %}
+    </select> <br>
+    <br><input type='submit' value='Start Game' />
+  </form>
+{% endblock %}
