--- a/templates/question.html
+++ b/templates/question.html
@@ -4,10 +4,10 @@
 <h4 id="question">{{question}}</h4>
 <form id='answerform' method='post' action='next' >
   Answer: <br />
-  <input type='radio' name='response' value='A' /> {{ans1}} <br />
-  <input type='radio' name='response' value='B' /> {{ans2}} <br />
-  <input type='radio' name='response' value='C' /> {{ans3}} <br />
-  <input type='radio' name='response' value='D' /> {{ans4}} <br />
+  <input id='choice1' type='radio' name='response' value='A' /><label for='choice1'>{{ans1}}</label> <br />
+  <input id='choice2' type='radio' name='response' value='B' /><label for='choice2'>{{ans2}}</label> <br />
+  <input id='choice3' type='radio' name='response' value='C' /><label for='choice3'>{{ans3}}</label> <br />
+  <input id='choice4' type='radio' name='response' value='D' /><label for='choice4'>{{ans4}}</label> <br />
   <br />
   <input type='submit' value='Submit' />
 </form>
