--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>Login</h2>
+  <h2>Create Account</h2>
   {% if error %}<p class=error>Error: {{error}}</p>{% endif %}
-  <form method='post' action='login'>
+  <form method='post' action='create_account'>
     Username: <input type='text' name='username'><br />
     Password: <input type='password' name='password'><br />
+    Confirm Password: <input type='password' name='password_confirm'><br />
     <input type='submit' value='Submit' />
   </form>
-  <a href="{{url_for('create_user')}}">Don't have an account? Sign up.</a>
 {% endblock %}
