--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,7 +1,142 @@
 {% extends "layout.html" %}
 {% block body %}
   {% if session.logged_in and session.username == 'admin' %}
-    <h2>Access Granted</h2>
+    <h2>Proposed Edits</h2>
+    <h4>Additions</h4>
+    <table border='1'>
+      <thead>
+	<tr>
+	  <th></th>
+	  <th>Added By</th>
+	  <th>ID</th>
+	  <th>Number</th>
+	  <th>Question</th>
+	  <th>Answer "A"</th>
+	  <th>Answer "B"</th>
+	  <th>Answer "C"</th>
+	  <th>Answer "D"</th>
+	  <th>Correct</th>
+	</tr>
+      </thead>
+      <tbody>
+	{% for id, n, q, a1, a2, a3, a4, c, t, u in add %}
+	<tr>
+	  <td><input type='checkbox' name='{{id}}'></td>
+	  <td>{{u}}</td>
+	  <td>{{id}}</td>
+	  <td>{{n}}</td>
+	  <td>{{q}}</td>
+	  <td>{{a1}}</td>
+	  <td>{{a2}}</td>
+	  <td>{{a3}}</td>
+	  <td>{{a4}}</td>
+	  <td>{{c}}</td>
+	</tr>
+	{% endfor %}
+      </tbody>
+    </table>
+
+    <h4>Updates</h4>
+    <table border='1'>
+      <thead>
+	<tr>
+	  <th></th>
+	  <th>Added By</th>
+	  <th>ID</th>
+	  <th>Number</th>
+	  <th>Question</th>
+	  <th>Answer "A"</th>
+	  <th>Answer "B"</th>
+	  <th>Answer "C"</th>
+	  <th>Answer "D"</th>
+	  <th>Correct</th>
+	</tr>
+      </thead>
+      <tbody>
+	{% for id, n, q, a1, a2, a3, a4, c, t, u in update %}
+	<tr>
+	  <td><input type='checkbox' name='{{id}}'></td>
+	  <td>{{u}}</td>
+	  <td>{{id}}</td>
+	  <td>{{n}}</td>
+	  <td>{{q}}</td>
+	  <td>{{a1}}</td>
+	  <td>{{a2}}</td>
+	  <td>{{a3}}</td>
+	  <td>{{a4}}</td>
+	  <td>{{c}}</td>
+	</tr>
+	{% endfor %}
+      </tbody>
+    </table>
+
+    <h4>Deletions</h4>
+    <table border='1'> 
+      <thead>
+	<tr>
+	  <th></th>
+	  <th>Added By</th>
+	  <th>ID</th>
+	  <th>Number</th>
+	  <th>Question</th>
+	  <th>Answer "A"</th>
+	  <th>Answer "B"</th>
+	  <th>Answer "C"</th>
+	  <th>Answer "D"</th>
+	  <th>Correct</th>
+	</tr>
+      </thead>
+      <tbody>
+	{% for id, n, q, a1, a2, a3, a4, c, t, u in delete %}
+	<tr>
+	  <td><input type='checkbox' name='{{id}}'></td>
+	  <td>{{u}}</td>
+	  <td>{{id}}</td>
+	  <td>{{n}}</td>
+	  <td>{{q}}</td>
+	  <td>{{a1}}</td>
+	  <td>{{a2}}</td>
+	  <td>{{a3}}</td>
+	  <td>{{a4}}</td>
+	  <td>{{c}}</td>
+	</tr>
+	{% endfor %}
+      </tbody>
+    </table>
+
+    <h4>Question Database</h4>
+
+    <table border='1'>
+      <thead>
+	<tr>
+	  <th>Number</th>
+	  <th>Question</th>
+	  <th>Answer "A"</th>
+	  <th>Answer "B"</th>
+	  <th>Answer "C"</th>
+	  <th>Answer "D"</th>
+	  {% if session.username == 'admin' %}
+	  <th>Correct Answer</th>
+	  {% endif %}
+	</tr>
+      </thead>
+      <tbody>
+      {% for q_dict in questions %}
+	<tr>
+	  <td>{{q_dict['id']}}</td>
+	  <td>{{q_dict['question']}}</td>
+	  <td>{{q_dict['A']}}</td>
+	  <td>{{q_dict['B']}}</td>
+	  <td>{{q_dict['C']}}</td>
+	  <td>{{q_dict['D']}}</td>
+	  {% if session.username == 'admin' %}
+	  <td>{{q_dict['correct']}}</td>
+	  {% endif %}
+	</tr>
+      {% endfor %}
+      </tbody>
+    </table>
+
   {% else %}
     <h2> Access Denied! </h2>
   {% endif %}
